<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp">

    <TextView
            android:id="@+id/suppliers_title"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="30dp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:includeFontPadding="false"
            android:text="@string/supplier_title"/>

    <TextView
            android:id="@+id/suppliers_subtitle"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="24dp"
            android:includeFontPadding="false"
            android:text="@string/supplier_overview_subtitle"/>

    <include
        android:id="@+id/suppliers_audio"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="15dp"
        layout="@layout/view_audio_track" />

    <TextView
            android:id="@+id/suppliers_body"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:includeFontPadding="false"
            android:text="@string/supplier_description"
            android:textSize="22dp"/>

    <include
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/suppliers_document"
        layout="@layout/view_document"
        android:layout_marginTop="18dp" />

</LinearLayout>

        