<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

    <TextView
            android:id="@+id/title"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingLeft="30dp"
            android:gravity="left"
            android:paddingTop="30dp"
            android:textSize="28sp"
            android:textStyle="bold"
            android:text="@string/value_chain_title" />

    <TextView
            android:id="@+id/description"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingLeft="30dp"
            android:paddingRight="5dp"
            android:gravity="left"
            android:layout_below="@+id/title"
            android:layout_alignLeft="@+id/title"
            android:paddingTop="3dp"
            android:text="@string/value_chain_description" />

    <com.cocacola.climateambassador.ui.views.DocumentsLayout
            android:id="@+id/course_materials"
            android:layout_height="wrap_content"
            android:layout_width="850dp"
            android:orientation="vertical"
            android:layout_below="@+id/description"
            android:paddingLeft="30dp"
            android:layout_alignLeft="@+id/title"
            android:paddingTop="10dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="10sp"
                android:text="@string/course_material_title"/>

    </com.cocacola.climateambassador.ui.views.DocumentsLayout>

</RelativeLayout>