<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <TextView
            android:id="@+id/title"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingLeft="30dp"
            android:gravity="left"
            android:paddingTop="30dp"
            android:textSize="28sp"
            android:textStyle="bold"
            android:text="@string/value_chain_title" />

    <TextView
            android:id="@+id/description"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingLeft="30dp"
            android:paddingRight="5dp"
            android:gravity="left"
            android:layout_below="@+id/title"
            android:layout_alignLeft="@+id/title"
            android:paddingTop="3dp"
            android:text="@string/value_chain_description" />

    <TextView
            android:id="@+id/instruction"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_below="@+id/description"
            android:paddingLeft="30dp"
            android:gravity="left"
            android:layout_alignLeft="@+id/title"
            android:paddingTop="10dp"
            android:textStyle="bold"
            android:textSize="10sp"
            android:text="@string/download_instruction" />

    <LinearLayout
            android:id="@+id/material_row_one"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingTop="3dp"
            android:paddingLeft="30dp"
            android:layout_alignLeft="@+id/title"
            android:layout_below="@+id/instruction"
            android:orientation="horizontal">

        <ImageView
                android:id="@+id/star_one"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@drawable/test_star" />

        <ImageView
                android:id="@+id/divider"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@drawable/test_divider"
                android:paddingLeft="3dp"
                android:paddingRight="3dp" />

        <Button
                android:id="@+id/powerpoint_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


    </LinearLayout>

    <LinearLayout
            android:id="@+id/material_row_two"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingTop="3dp"
            android:paddingLeft="30dp"
            android:layout_alignLeft="@+id/title"
            android:layout_below="@+id/material_row_one"
            android:orientation="horizontal">

        <ImageView
                android:id="@+id/star_two"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@drawable/test_star" />

        <ImageView
                android:id="@+id/divider"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@drawable/test_divider"
                android:paddingLeft="3dp"
                android:paddingRight="3dp" />

        <Button
                android:id="@+id/movie_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


    </LinearLayout>

    <LinearLayout
            android:id="@+id/material_row_three"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingTop="3dp"
            android:paddingLeft="30dp"
            android:layout_alignLeft="@+id/title"
            android:layout_below="@+id/material_row_two"
            android:orientation="horizontal">

        <ImageView
                android:id="@+id/star_three"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@drawable/test_star" />

        <ImageView
                android:id="@+id/divider"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@drawable/test_divider"
                android:paddingLeft="3dp"
                android:paddingRight="3dp" />

        <Button
                android:id="@+id/doc_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>